force-app/main/default/objects/Compliance_Violation__c/Compliance_Violation__c.object-meta.xml
<CustomObject>
    <label>SMS Compliance Violation</label>
    <nameField>
        <label>Violation Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SMS Compliance Violations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>