force-app/main/default/objects/Compliance_Violation__c/fields/Date_of_Fine__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Fine__c</fullName>
    <label>Date of Fine</label>
    <type>Date</type>
</CustomField>