force-app/main/default/objects/Compliance_Violation__c/fields/Fine_Total__c.field-meta.xml
<CustomField>
    <fullName>Fine_Total__c</fullName>
    <label>Fine Total</label>
    <summarizedField>Compliance_Fine__c.Fine_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Compliance_Fine__c.QC_Fine_Code__c</field>
        <operation>startsWith</operation>
        <value>QC</value>
    </summaryFilterItems>
    <summaryForeignKey>Compliance_Fine__c.Compliance_Violation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>