force-app/main/default/objects/Compliance_Violation__c/fields/MLS_Number__c.field-meta.xml
<CustomField>
    <fullName>MLS_Number__c</fullName>
    <label>MLS Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>