force-app/main/default/objects/Compliance_Violation__c/fields/Rollup_Pending__c.field-meta.xml
<CustomField>
    <fullName>Rollup_Pending__c</fullName>
    <label>Rollup Pending</label>
    <summarizedField>Compliance_Fine__c.Fine_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Compliance_Fine__c.Status__c</field>
        <operation>equals</operation>
        <value>Pending, Under Appeal</value>
    </summaryFilterItems>
    <summaryForeignKey>Compliance_Fine__c.Compliance_Violation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>