force-app/main/default/objects/Compliance_Violation__c/fields/Rollup_Total__c.field-meta.xml
<CustomField>
    <fullName>Rollup_Total__c</fullName>
    <label>Rollup Total</label>
    <summarizedField>Compliance_Fine__c.Fine_Amount__c</summarizedField>
    <summaryForeignKey>Compliance_Fine__c.Compliance_Violation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>