force-app/main/default/objects/Compliance_Violation__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription</label>
    <referenceTo>Subscriptions__c</referenceTo>
    <relationshipLabel>Compliance_Violations</relationshipLabel>
    <relationshipName>Compliance_Violations</relationshipName>
    <type>Lookup</type>
</CustomField>