force-app/main/default/objects/Compliance_Violation__c/fields/Violation__c.field-meta.xml
<CustomField>
    <fullName>Violation__c</fullName>
    <label>Violation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>