force-app/main/default/objects/Compliance_Violation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Subscription__c</columns>
    <columns>Subscription_ID__c</columns>
    <columns>Rollup_Total__c</columns>
    <columns>Fine_Total__c</columns>
    <columns>Date_of_Fine__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>